--- a/view/index.html
+++ b/view/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
   <html>
   <head>
-    <title>Hello</title>
+    <title>Auto entrepreneur, Driss Kahfy</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1> Hello World! </h1>
-    <p> Ça marche ... </p>
+    <h1> Driss Kahfy </h1>
+    <p> Auto entrepreneur ... </p>
+    <p> Développeur d'applications web & mobiles </p>
   </body>
 </html>
