--- a/view/index.html
+++ b/view/index.html
@@ -3,9 +3,16 @@
   <head>
     <title>Auto entrepreneur, Driss Kahfy</title>
     <meta charset="utf-8">
+    <style>
+      a{
+        margin-left:10px;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <h1> Driss Kahfy </h1>
+    <p> <a href="#"> Accueil </a>  <a href="services.html"> Services </a> <a href="contact.html"> Contact </a> </p>
     <p> Auto entrepreneur ... </p>
     <p> Développeur d'applications web & mobiles </p>
   </body>
