--- a/view/services.html
+++ b/view/services.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+  <html>
+  <head>
+    <title>Mes service</title>
+    <meta charset="utf-8">
+    <style>
+      a{
+        margin-left:10px;
+        text-decoration: none;
+      }
+    </style>
+  </head>
+  <body>
+    <h1> Mes services </h1>
+    <p> <a href="/"> Accueil </a>  <a href="#"> Services </a> <a href="contact.html"> Contact </a> </p>
+    <p> 
+      <ul> 
+        <li> Développement web : Nodejs, Angularjs </li>
+        <li> Base de données : MongoDB </li>
+        <li> Développement mobile :  android </li>
+      </ul> 
+    </p>
+  </body>
+</html>
