--- a/view/contact.html
+++ b/view/contact.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+  <html>
+  <head>
+    <title>Contact</title>
+    <meta charset="utf-8">
+    <style>
+      a{
+        margin-left:10px;
+        text-decoration: none;
+      }
+    </style>
+  </head>
+  <body>
+    <h1> À votre service </h1>
+    <p> <a href="/"> Accueil </a>  <a href="services"> Services </a> <a href="#"> Contact </a> </p>
+    <p> 
+      <form>
+        <input type="text" placeholder="nom"/> </br>
+        <textarea name="message"   placeholder="Votre demande" cols="40"  rows="10"></textarea><br/>
+        <input type="reset"  value="Annuler"/><input type="submit" name="envoie"  value="OK"/>
+			</form>
+    </p>
+  </body>
+</html>
