--- a/view/index.html
+++ b/view/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1> Driss Kahfy </h1>
-    <p> <a href="#"> Accueil </a>  <a href="services.html"> Services </a> <a href="contact.html"> Contact </a> </p>
+    <p> <a href="#"> Accueil </a>  <a href="services"> Services </a> <a href="contact"> Contact </a> </p>
     <p> Auto entrepreneur ... </p>
     <p> Développeur d'applications web & mobiles </p>
   </body>
