--- a/view/services.html
+++ b/view/services.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1> Mes services </h1>
-    <p> <a href="/"> Accueil </a>  <a href="#"> Services </a> <a href="contact.html"> Contact </a> </p>
+    <p> <a href="/"> Accueil </a>  <a href="#"> Services </a> <a href="contact"> Contact </a> </p>
     <p> 
       <ul> 
         <li> Développement web : Nodejs, Angularjs </li>
