--- a/view/contact.html
+++ b/view/contact.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1> À votre service </h1>
-    <p> <a href="/"> Accueil </a>  <a href="services"> Services </a> <a href="#"> Contact </a> </p>
+    <p> <a href="/"> Accueil </a>  <a href="/services"> Services </a> <a href="#"> Contact </a> </p>
     <p> 
       <form>
         <input type="text" placeholder="nom"/> </br>
